# robo-data-fabric

./: .gitignore  README_UI.md  docker-compose.yml  env.example  house_sales_forecasting.py  house_sales_setup.sql  quickstart_tutorial.py  start_ui.sh  tutorial_http.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/routers/: datasources.py  query.py
backend/app/schemas/: datasource.py  query.py
backend/app/services/: mindsdb_service.py  neo4j_service.py  schema_introspection.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  router.ts  style.css
frontend/src/api/: client.ts
frontend/src/stores/: datasources.ts  query.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  DataSources.vue  MaterializedTables.vue  MindsDBObjects.vue  QueryEditor.vue
init-scripts/: 01_create_sample_tables.sql
